210922 사용자 대시보드(1/2)

--- a/DynamicHanaAdmin/src/main/webapp/resources/assets/js/plugins/jquery.scrollbar/jquery.scrollbar.css
+++ b/DynamicHanaAdmin/src/main/webapp/resources/assets/js/plugins/jquery.scrollbar/jquery.scrollbar.css
@@ -235,7 +235,7 @@
   background-color: #919191;
 }
 
-/* scrollbar height/width & offset from container borders */
+/* scrollbar height/width & offset from dashboard_container borders */
 .scrollbar-outer>.scroll-content.scroll-scrolly_visible {
   left: -12px;
   margin-left: 12px;
@@ -334,7 +334,7 @@
   width: 0px;
 }
 
-/* scrollbar height/width & offset from container borders */
+/* scrollbar height/width & offset from dashboard_container borders */
 .scrollbar-macosx>.scroll-element.scroll-x .scroll-bar {
   height: 7px;
   min-width: 10px;
@@ -446,7 +446,7 @@
   border-radius: 10px;
 }
 
-/* scrollbar height/width & offset from container borders */
+/* scrollbar height/width & offset from dashboard_container borders */
 .scrollbar-light>.scroll-content.scroll-scrolly_visible {
   left: -17px;
   margin-left: 17px;
@@ -569,7 +569,7 @@
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
 }
 
-/* scrollbar height/width & offset from container borders */
+/* scrollbar height/width & offset from dashboard_container borders */
 .scrollbar-rail>.scroll-content.scroll-scrolly_visible {
   left: -17px;
   margin-left: 17px;
@@ -693,7 +693,7 @@
   border-radius: 7px;
 }
 
-/* scrollbar height/width & offset from container borders */
+/* scrollbar height/width & offset from dashboard_container borders */
 .scrollbar-dynamic>.scroll-element.scroll-x .scroll-bar {
   bottom: 0;
   height: 7px;
@@ -845,7 +845,7 @@
   border-color: #7e7e7e;
 }
 
-/* scrollbar height/width & offset from container borders */
+/* scrollbar height/width & offset from dashboard_container borders */
 .scrollbar-chrome>.scroll-content.scroll-scrolly_visible {
   left: -16px;
   margin-left: 16px;
